--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pokedex</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="container">
-        <div class="content">
-            <h1>Trabalhando com <span>HTML</span>, <span>CSS</span> e usando o <span>JavaScript</span> para fazer consultas online.</h1>
-            <hr>
-        </div>
+        <h1>CONSULTANDO POKEMONS</h1>
+        <hr>
         <div class="imagem">
-            <img src="img/logo.png" alt="logo-pokemon">
+            <img src="./assets/img/logo.png" alt="logo-pokemon">
         </div>
         <div class="content">
             <label for="pesquisa">Nome ou Número do Pokémon:</label>
-            <input type="search" id="pesquisa" name="pesquisa" placeholder="Exemplo: Pikachu ou 25" required>
+            <input type="search" id="search" name="pesquisa" placeholder="Exemplo: Pikachu ou 25" required>
             <input value="PESQUISAR" class="btSearch" onclick="searchPoke()">
-            <div id="display-img">lala
+            <div id="display-img">
             </div>
             <div id="name-type">...</div>
         </div>
-        <div class="container">
-            <video src="https://www.youtube.com/watch?v=SSViT336Vq4"></video>
-            <div class="control">
-
-            </div>
-        </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/script/script.js"></script>
 </body>
 </html>
